Completed today's weather

--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
     margin-top: 10px;
     width: 100%;
 }
+
+.weather-today, .weather-5day {
+    display: none;
+}
+
+.today-content > p {
+    margin-bottom: 0px;
+}
